[gd_scene load_steps=13 format=2]

[ext_resource path="res://Fish.gd" type="Script" id=1]
[ext_resource path="res://art/whale_swim0.png" type="Texture" id=2]
[ext_resource path="res://art/whale_swim1.png" type="Texture" id=3]
[ext_resource path="res://art/whale_eat1.png" type="Texture" id=4]
[ext_resource path="res://art/whale_eat0.png" type="Texture" id=5]
[ext_resource path="res://Hat.tscn" type="PackedScene" id=6]
[ext_resource path="res://Monocle.tscn" type="PackedScene" id=7]
[ext_resource path="res://art/fonts/slkscre.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://Heart.tscn" type="PackedScene" id=9]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "swim",
"speed": 3.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 2 ) ],
"loop": true,
"name": "eat",
"speed": 4.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 65.1023
height = 65.5854

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = ExtResource( 8 )

[node name="Fish" type="Area2D"]
scale = Vector2( 0.75, 0.75 )
gravity_vec = Vector2( 0, 0 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "swim"
frame = 1
playing = true
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -15, 0 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="Hat" parent="." instance=ExtResource( 6 )]

[node name="Monocle" parent="." instance=ExtResource( 7 )]

[node name="Status" type="Label" parent="."]
margin_left = -125.0
margin_top = -175.0
margin_right = 175.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 3 )
text = "Name: Whaleu
Age: 0
Happiness: 0
Fullness: 0"

[node name="Heart" parent="." instance=ExtResource( 9 )]

[node name="MoveTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="EmoteTimer" type="Timer" parent="."]

[node name="StatusTimer" type="Timer" parent="."]

[node name="AgeTimer" type="Timer" parent="."]
wait_time = 60.0

[node name="HappinessTimer" type="Timer" parent="."]
wait_time = 30.0

[node name="FullnessTimer" type="Timer" parent="."]
wait_time = 10.0
[connection signal="timeout" from="MoveTimer" to="." method="_on_MoveTimer_timeout"]
[connection signal="timeout" from="EmoteTimer" to="." method="_on_EmoteTimer_timeout"]
[connection signal="timeout" from="StatusTimer" to="." method="_on_StatusTimer_timeout"]
[connection signal="timeout" from="AgeTimer" to="." method="_on_AgeTimer_timeout"]
[connection signal="timeout" from="HappinessTimer" to="." method="_on_HappinessTimer_timeout"]
[connection signal="timeout" from="FullnessTimer" to="." method="_on_FullnessTimer_timeout"]
